# copyright-hook

./: .gitignore  .pre-commit-hooks.yaml  .prospector.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: run-tests.yml
copyrighthook/: __init__.py  config.py  copyright.py  git_utilities.py  years_pattern.py
tests/: run_updater_test.py  update_file_test.py
